fix negative values and count func

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="container">
         <h1>Lamps</h1>
         <input type="text" id="lamp-type" placeholder="Lamp Type" />
-        <input type="number" id="lamp-power" placeholder="Power (Watts)" />
-        <input type="number" id="lamp-leds" placeholder="Number of LEDs" />
+        <input type="number" id="lamp-power" placeholder="Power (Watts)" min="0"/>
+        <input type="number" id="lamp-leds" placeholder="Number of LEDs" min="0"/>
         <input type="text" id="lamp-manufacturer" placeholder="Manufacturer" />
         <div class="container__buttons">
             <button id="add-lamp">Add a Lamp</button>
